--- a/vignettes/scMultiome.Rmd
+++ b/vignettes/scMultiome.Rmd
@@ -24,11 +24,13 @@ knitr::opts_chunk$set(
 
 # Introduction
 
-Single cell data is gaining sophistication - Cells can be measured in multiple modalities including gene expression, chromatin accessibility, cell surface markers and protein expression. These orthogonal measures of the same or matched cells enable a holistic construction of the cell state. However it has been challenging to share multiomic data, especially in an integrated format that consolidates the multiple layers of measurement. The `MultiAssayExperiment` provides a framework to package the various modalities into a single dataset on a per cell basis.
+Single cell data is gaining sophistication - Cells can be measured in multiple modalities including gene expression, chromatin accessibility, cell surface markers and protein expression. These orthogonal measures of the same or matched cells enable a holistic construction of the cell state. However it has been challenging to share multiomic data, especially in an integrated format that consolidates the multiple layers of measurement. The `MultiAssayExperiment` container (implemented in the `r Biocpkg("MultiAssayExperiment")` package) provides a framework to package the various modalities into a single object on a per cell basis.
 
-The `scMultiome` package is a collection of public single cell multiome data sets pre-processed and packaged into `MultiAssayExperiment` objects for downstream analysis. It also provides basic functions to save the `MultiAssayExperiment` as `.hdf5` files so that users can load only the desired modalities into memory. `scMultiome` provides interface with the `ArchR` [package](https://www.archrproject.com/) by allowing the conversion of an ArchR project to a `MultiAssayExperiment`.
+The `scMultiome` package is a collection of public single cell multiome data sets pre-processed and packaged into `MultiAssayExperiment` objects for downstream analysis. It also provides basic functions to save the `MultiAssayExperiment` as `.hdf5` files so that users need to only load the desired modalities into memory. `scMultiome` provides interface with the [*ArchR*](https://www.archrproject.com/) package by allowing the conversion of an ArchR project to a `MultiAssayExperiment`.
 
+The 'scMultiome' package is similar to `r Biocpkg("SingleCellMultiModal")` in terms of providing multimodal data as an ExperimentHub package. One key difference is that we included additional functionalities to load only the desired modalities, and allow users to save their `MAE` objects as `.hdf5`s. The selective loading of experiments is desirable because multimodal data can be large: A typical 10x scMultiome consists of 100-200K atac-seq peaks on top of the typical 30-50K genes from rna-seq. Finally, `scMultiome` provides a list of transcription factor and chromatin co-activator binding sites compiled from ENCODE, ChIP-Atlas or Cistrome-DB ChIP-seq data as `GRangesList` objects. ChIP-seq data complements transcription factor motif information by potentially distinguishing related family members and providing occupancy information of chromatin factors that do not directly bind to DNA.
 
+   
 # Installation
 ``` {r, eval = FALSE}
 if (!require("BiocManager", quietly = TRUE)) install.packages("BiocManager")
@@ -142,7 +144,7 @@ Each Matrix in the project becomes a `SingleCellExperiment`; its `colData` is de
 
 ## Contributing
 
-If you want to contribute your publicly available multiome data set, please read the vignette _Adding Datasets_ and contact the package maintainer, `r desc::desc_get_maintainer()`.
+If you want to contribute your publicly available multiome data set, please read the section [Adding Datasets] and contact the package maintainer, `r desc::desc_get_maintainer()`.
 
 
 
